Food routes controller and model working
